--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.1.4",
+        "pinia": "^2.3.1",
         "vue": "^3.5.12",
         "vue-router": "^4.4.5",
         "vuetify": "^3.7.4"
