--- a/package.json
+++ b/package.json
@@ -6,19 +6,24 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.12",
+        "@tailwindcss/vite": "^4.1.12",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.7",
         "concurrently": "^9.0.1",
+        "daisyui": "^5.0.51",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
+        "tailwindcss": "^4.1.12",
         "vite": "^5.4.10"
     },
     "dependencies": {
+        "@mdi/font": "^7.4.47",
         "@vitejs/plugin-vue": "^5.1.4",
         "pinia": "^2.3.1",
+        "poe-api-manager": "^1.2.23",
         "vue": "^3.5.12",
         "vue-router": "^4.4.5",
-        "vuetify": "^3.7.4"
+        "vue3-apexcharts": "^1.8.0"
     }
 }
