--- a/.env.example
+++ b/.env.example
@@ -19,10 +19,17 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+#DB_CONNECTION=pgsql
+#DB_HOST=127.0.0.1
+#DB_PORT=5432
+#DB_DATABASE=builds-codex
+#DB_USERNAME=postgres
+#DB_PASSWORD=root
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=
+DB_DATABASE=builds-codex
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -60,5 +67,7 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
+
+#SANCTUM_STATEFUL_DOMAINS=builds-codex.test:5173
 
 VITE_APP_NAME="${APP_NAME}"
