--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=Builds Codex
+APP_ENV=production
 APP_KEY=base64:LsG3IHx/WVjJIUXjECAuC5CmwGHljnxq5+WiuWhGy+M=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_TIMEZONE=UTC
-APP_URL=http://builds-codex.test/
+APP_URL=http://builds-codex.com/
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -26,7 +26,7 @@ LOG_LEVEL=debug
 #DB_USERNAME=postgres
 #DB_PASSWORD=root
 
-DB_CONNECTION=mysql
+DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=builds-codex
